@startuml

title __GAMEMORELESS's Class Diagram__\n

  namespace model {
    abstract class model.Handler {
    }
  }
  

  namespace model {
    class model.NegativeHandler {
    }
  }
  

  namespace model {
    class model.PositiveHandler {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  model.Handler o-- model.Handler : processor
  model.NegativeHandler -up-|> model.Handler
  model.PositiveHandler -up-|> model.Handler
  sample.Controller o-- model.Handler : chain
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
